The design for the app has been updated.

--- a/inside-track/index.html
+++ b/inside-track/index.html
@@ -9,16 +9,29 @@
 </head>
 
 <body>
-    <h1><span>Diamond Casino & Resort:</span> Inside Track Odds Calculator</h1>
-    <form>
-        <label><input type="number" min="1" step="1" placeholder="Numerator of odds" required>/1<br><output></output></label>
-        <label><input type="number" min="1" step="1" placeholder="Numerator of odds" required>/1<br><output></output></label>
-        <label><input type="number" min="1" step="1" placeholder="Numerator of odds" required>/1<br><output></output></label>
-        <label><input type="number" min="1" step="1" placeholder="Numerator of odds" required>/1<br><output></output></label>
-        <label><input type="number" min="1" step="1" placeholder="Numerator of odds" required>/1<br><output></output></label>
-        <label><input type="number" min="1" step="1" placeholder="Numerator of odds" required>/1<br><output></output></label>
-        <button type="submit">Calculate</button>
-    </form>
+    <main>
+        <h1><span>Diamond Casino & Resort:</span><br>Inside Track Odds Calculator</h1>
+        <p>This tool calculates the odds for each horse at the Inside Track at the Diamond Casino & Resort in GTA
+            Online.</p>
+        <form>
+            <label><input type="number" min="1" step="1" placeholder="Numerator of odds"
+                    required>/1<br><output></output></label>
+            <label><input type="number" min="1" step="1" placeholder="Numerator of odds"
+                    required>/1<br><output></output></label>
+            <label><input type="number" min="1" step="1" placeholder="Numerator of odds"
+                    required>/1<br><output></output></label>
+            <label><input type="number" min="1" step="1" placeholder="Numerator of odds"
+                    required>/1<br><output></output></label>
+            <label><input type="number" min="1" step="1" placeholder="Numerator of odds"
+                    required>/1<br><output></output></label>
+            <label><input type="number" min="1" step="1" placeholder="Numerator of odds"
+                    required>/1<br><output></output></label>
+            <button type="submit">Calculate</button>
+        </form>
+    </main>
+    <footer>
+        <small>&copy; 2025 Ratnik (Ra7n1k) on ra7n1k.com</small>
+    </footer>
     <script src="./script.js"></script>
 </body>
 
