The landing page has been created.

--- a/roulette/index.html
+++ b/roulette/index.html
@@ -80,7 +80,7 @@
         </form>
     </main>
     <footer>
-        <small>&copy; 2025 Ra7n1k on ra7n1k.com</small>
+        <small>&copy; 2025 Ratnik (Ra7n1k) on ra7n1k.com</small>
     </footer>
     <script src="./script.js"></script>
 </body>
