An accessibility problem has been fixed.

--- a/roulette/index.html
+++ b/roulette/index.html
@@ -21,6 +21,7 @@
             <template id="option">
                 <div>
                     <label>
+                        Target:
                         <select name="target">
                             <option value="1-18">1-18</option>
                             <option value="19-36">19-36</option>
